CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(TrainSystem)

SET(CMAKE_CXX_STANDARD 14)
# SET(CMAKE_CXX_FLAGS "-Ofast")

# for local test
SET(CMAKE_CXX_FLAGS "-fsanitize=address -g -ftrapv -Wall -Wextra")
# SET(CMAKE_CXX_STACK_SIZE "419430400")

AUX_SOURCE_DIRECTORY(./trainsys SRC)

ADD_EXECUTABLE(main ${SRC})